# artifacts-mmo

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
artifacts-mmo/: Cargo.toml
artifacts-mmo/schema/version/v5/: account_details_schema.rs  account_leaderboard_schema.rs  account_leaderboard_typeaz_az09.rs  account_status.rs  achievement_response_schema.rs  achievement_rewards_schema.rs  achievement_type_a-z_a-_z0-9_-_____.rs  announcement_schema.rs  badge_response_schema.rs  bank_extension_transaction_response_schema.rs  bank_extension_transaction_schema.rs  bank_gold_transaction_response_schema.rs  bank_gold_transaction_schema.rs  change_skin_response_schema.rs  character_fight_response_schema.rs  character_movement_response_schema.rs  character_rest_response_schema.rs  character_skin.rs  characters_list_schema.rs  crafting_schema.rs  data_page__log_schema_.rs  data_page__map_schema_.rs  data_page__monster_schema_.rs  data_page_ge_order_history_schema.rs  delete_item_response_schema.rs  effect_schema.rs  event_map_schema.rs  event_schema.rs  ge_order_history_schema.rs  georder_schema.rs  getransaction_list_schema.rs  give_gold_reponse_schema.rs  item_type.rs  item_typeaz_az09.rs  log_schema.rs  mod.rs  my_characters_list_schema.rs  npc_merchant_transaction_response_schema.rs  npc_response_schema.rs  npc_type.rs  (+18 more)
artifacts-mmo/src/: lib.rs
artifacts-mmo/src/api/: mod.rs
artifacts-mmo/src/api/v4/: accounts.rs  characters.rs  leaderboard.rs  maps.rs  mod.rs  monsters.rs  my_characters.rs  resources.rs  status.rs
artifacts-mmo/src/api/v5/: account_achievement_schema.rs  account_details.rs  account_details_schema.rs  account_leaderboard_schema.rs  achievement_schema.rs  achievement_type_a_z_a__z0_9_______.rs  achievement_type_a_z_a_z0_9.rs  action_type.rs  active_event_schema.rs  add_account_schema.rs  add_character_schema.rs  badge_condition_schema.rs  badge_schema.rs  bank_gold_transaction_response_schema.rs  bank_item_transaction_response_schema.rs  bank_item_transaction_schema.rs  change_password.rs  change_skin_character_data_schema.rs  change_skin_character_schema.rs  change_skin_response_schema.rs  character_leaderboard_schema.rs  character_leaderboard_type_a_z_a__z0_9_______.rs  character_leaderboard_typeaz_az09.rs  character_movement_data_schema.rs  character_movement_response_schema.rs  character_rest_data_schema.rs  character_rest_response_schema.rs  character_schema.rs  characters_list_schema.rs  condition_schema.rs  cooldown_schema.rs  craft_schema.rs  craft_skill.rs  craft_skill_a_z_a__z0_9_______.rs  craft_skillaz_az09.rs  data_page__account_achievement_schema_.rs  data_page__account_leaderboard_schema_.rs  data_page__achievement_schema_.rs  data_page__active_event_schema_.rs  data_page__badge_schema_.rs  (+71 more)
artifacts-mmo/src/api/v6/: access_schema.rs  account_achievement_schema.rs  account_leaderboard_type_a_z_a__z0_9_______.rs  achievement_response_schema.rs  achievement_schema.rs  achievement_type.rs  action_type.rs  active_character_schema.rs  active_event_response_schema.rs  badge_condition_schema.rs  badge_response_schema.rs  badge_schema.rs  bank_extension_transaction_response_schema.rs  bank_extension_transaction_schema.rs  bank_gold_transaction_schema.rs  bank_item_transaction_schema.rs  bank_response_schema.rs  change_skin_character_data_schema.rs  change_skin_character_schema.rs  character_fight_data_schema.rs  character_fight_response_schema.rs  character_fight_schema.rs  character_movement_data_schema.rs  character_multi_fight_result_schema.rs  character_response_schema.rs  character_rest_data_schema.rs  character_schema.rs  character_skin.rs  character_transition_data_schema.rs  character_transition_response_schema.rs  combat_result_schema.rs  combat_simulation_data_schema.rs  combat_simulation_request_schema.rs  combat_simulation_response_schema.rs  condition_operator.rs  condition_schema.rs  cooldown_schema.rs  craft_schema.rs  craft_skill_a_z_a__z0_9_______.rs  data_page__account_achievement_schema_.rs  (+86 more)
crates/dioxus-ui/: Cargo.toml  Dioxus.toml
crates/dioxus-ui/src/: main.rs
crates/dioxus-ui/src/configuration/: mod.rs
crates/dioxus-ui/src/http/: mod.rs
crates/dioxus-ui/src/interface/: app.rs
dioxus-ui/: Cargo.toml
dioxus-ui/assets/: main.css
dioxus-ui/dioxus-ui/: api_key
dioxus-ui/src/: main.rs
dioxus-ui/src/constants/: css.rs  mod.rs
dioxus-ui/src/controller/: mod.rs
dioxus-ui/src/http/: mod.rs
dioxus-ui/src/interface/: app.rs  mod.rs
dioxus-ui/src/interface/component/: account.rs  character.rs  layout.rs  mod.rs  navigation.rs  status.rs
dioxus-ui/src/interface/configuration/: desktop.rs
dioxus-ui/src/interface/page/: characters.rs  map.rs  (+4 more)
egui-ui/: Cargo.toml
egui-ui/src/: main.rs
egui-ui/src/configuration/: mod.rs
egui-ui/src/constants/: mod.rs
egui-ui/src/interface/: app.rs
schema-converter/: Cargo.toml
schema-converter/output/: AccountAchievementSchema.rs  AccountDetails.rs  AccountDetailsSchema.rs  AccountLeaderboardSchema.rs  AchievementResponseSchema.rs  AchievementSchema.rs  ActiveEventSchema.rs  AddAccountSchema.rs  AddCharacterSchema.rs  BadgeConditionSchema.rs  BadgeResponseSchema.rs  BadgeSchema.rs  BankExtensionTransactionResponseSchema.rs  BankExtensionTransactionSchema.rs  BankGoldTransactionResponseSchema.rs  BankGoldTransactionSchema.rs  BankItemTransactionResponseSchema.rs  BankItemTransactionSchema.rs  BankResponseSchema.rs  BankSchema.rs  ChangeSkinCharacterDataSchema.rs  ChangeSkinCharacterSchema.rs  ChangeSkinResponseSchema.rs  CharacterFightDataSchema.rs  CharacterFightResponseSchema.rs  CharacterLeaderboardSchema.rs  CharacterMovementDataSchema.rs  CharacterMovementResponseSchema.rs  CharacterResponseSchema.rs  CharacterRestDataSchema.rs  CharacterRestResponseSchema.rs  CharacterSchema.rs  CharactersListSchema.rs  ConditionSchema.rs  CooldownSchema.rs  CraftSchema.rs  DataPage_AccountAchievementSchema_.rs  DataPage_AccountLeaderboardSchema_.rs  DataPage_AchievementSchema_.rs  DataPage_ActiveEventSchema_.rs  (+131 more)
schema-converter/src/: components.rs  file_system.rs  main.rs  paths.rs
(+85 files in other folders)
