[workspace]
members = [
  "crates/artifacts-mmo",
  "crates/dioxus-ui"
]
default-members = [
  "crates/artifacts-mmo",
  "crates/dioxus-ui"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
# update rust-toolchain.toml too!
rust-version = "1.84.0"

[workspace.dependencies]
artifacts-mmo = { path = "crates/artifacts-mmo", version = "0.1.0" }

anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
iana-time-zone = "0.1.63"
env_logger = "0.11.5"
futures-util = "0.3.31"
http = {version = "1.3.1" }
# Logging
log = { version = "0.4.27", features = ["serde"] }
dioxus = { version = "0.6.3", features = ["desktop", "router"] }
dioxus-logger = "0.6.2"
dioxus-sdk = { version = "0.6.0", features = [
	"clipboard",
	"storage",
	"web-sys",
] }
kira = "0.10.5"
image = { version = "0.25.6", features = ["png"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.2" }
tracing = "0.1.41"
# Time
time = { version = "0.3.41", features = [
	"serde",
	"formatting",
	"std",
	"parsing",
] }
ureq = { version = "3.0.10", features = ["json", "cookies", "charset"] }
url = { version = "2.5.4" }
window-vibrancy = "0.6.0"





