[workspace]
members = ["artifacts-mmo", "egui-ui", "schema-converter"]
default-members = ["artifacts-mmo", "egui-ui" ]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
# update rust-toolchain.toml too!
rust-version = "1.84.0"

[workspace.dependencies]
artifacts-mmo = { path = "artifacts-mmo", version = "0.1.0" }

anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
iana-time-zone = "0.1.63"
env_logger = "0.11.5"
eframe = { version = "^0.31.1", default-features = false, features = [
	"default",     # Embed the default egui fonts.
	"glow",        # Use the glow rendering backend. Alternative: "wgpu".
	"persistence", # Enable restoring app state when restarting the app.
	"serde",
	"wgpu",        # 
] }
egui = { version = "0.31.1" }
egui_extras = { version = "0.31.1", features = [
	"all_loaders",
	"chrono",
	"datepicker",
	"serde",
] }
futures-util = "0.3.31"
http = { version = "1.3.1" }
# Logging
log = { version = "0.4.27", features = ["serde"] }
kira = "0.10.5"
image = { version = "0.25.6", features = ["png"] }
poll-promise = {version = "0.3.0", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.2" }
tracing = "0.1.41"
# Time
time = { version = "0.3.41", features = [
	"serde",
	"formatting",
	"std",
	"parsing",
] }
ureq = { version = "3.0.10", features = ["json", "cookies", "charset"] }
url = { version = "2.5.4" }
window-vibrancy = "0.6.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
