[package]
name = "egui-ui"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
artifacts-mmo = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
iana-time-zone = { workspace = true }
env_logger = { workspace = true }
eframe = { workspace = true, features = [
  "default",     # Embed the default egui fonts.
  "glow",        # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
  "serde",
  "wgpu",        # 
] }
egui = { workspace = true }
egui_extras = { workspace = true, features = [
  "svg",
  "chrono",
  "datepicker",
  "serde",
  "file",
] }
futures-util = { workspace = true }
# Logging
log = { workspace = true, features = ["serde"] }
kira = { workspace = true }
image = { workspace = true, features = ["png"] }
poll-promise = {workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true, features = ["json", "cookies", "charset"] }
url = { workspace = true }
