[package]
name = "schema-converter"
version = "0.1.0"
edition = "2021"


[dependencies]
oas3 = { version= "0.17.0"}
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true , features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
base64 = "0.21"
rand = "0.8"
regress = "0.4.1"
syn = "2.0"
