[package]
name = "dioxus-ui"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = {workspace = true} 
artifacts-mmo =  { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
iana-time-zone = {workspace = true}
env_logger = {workspace = true}
futures-util = {workspace = true}
# Logging
log = { workspace = true, features = ["serde"] }
dioxus = { workspace = true, features = ["desktop", "router"] }
dioxus-logger = {workspace = true}
dioxus-sdk = { workspace = true, features = [
	"clipboard",
	"storage",
	"web-sys",
] }
kira = {workspace = true}
image = { workspace = true, features = ["png"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = {workspace = true}
# Time
time = { workspace = true, features = [
	"serde",
	"formatting",
	"std",
	"parsing",
] }
ureq = { workspace = true, features = ["json", "cookies", "charset"] }
url = { workspace = true }
window-vibrancy = {workspace = true}

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
